[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "light-frisbee"
version = "1.0.0"
description = "Client application for reading data from a photoelectric sensor."
readme = "README.md"
authors = []
license = { file = "LICENSE" }
classifiers = [
    "Private :: Do Not Upload",  # Prevent package from being uploaded to PyPI. Remove when project is to be published.
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
]
keywords = []
dependencies = [
    "gpiozero >= 1.6.2",
    "RPi.GPIO >= 0.7.1",
    "requests >= 2.28.1",
    "websockets >= 10.1"
]
requires-python = ">=3.10.4"

[project.optional-dependencies]
dev = []

[project.urls]
Homepage = "TBD"
Documentation = "TBD"
Repository = "TBD"

[project.scripts]
light-frisbee = "light_frisbee.main: main"